Fix selection rendering with custom line height

BUG: 475378